--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
                 <i class='bx bx-moon moon-icon' ></i>
                 <i class='bx bx-sun sun-icon hide' ></i>
             </div>
-            <p class="title1">VIETCONG24</p>
+            <p class="title1">VIỆT CỘNG 24</p>
             <p class="title2">Trần Thanh Thảo</p>
-            <p class="phone-number"><i class='bx bx-phone-call phone-icon' ></i> 0396 196 xxx</p>
+            <p class="phone-number"><i class='bx bx-phone-call phone-icon' ></i> 0396 196 705</p>
             <div class="header">
-                <p class="p-bg1">FRONT-END DEV</p>
+                <p class="p-bg1">ĐÔNG LÀO DEV</p>
             </div>
             <table class="content-table">
                 <tr class="tr1" >
@@ -91,7 +91,7 @@
             </table>
 
             <a href="">
-                <button class="contact-bt">Contact me</button>
+                <button class="contact-bt">Cài WIN, Nạp TWRP, UP ROM, Chống VIRUT USB Thông qua NTFS DRIVE, TOP 64 SEVER FPP DUO PUBG_MB </Thead> </button>
             </a>
             
         </div>  
@@ -104,7 +104,7 @@
             </div>
         </div> 
 
-        <p class="last"></p> <i class='bx bx-cross bx-spin last-icon'></i></p>
+        <p class="last"></p> <i class=''></i></p>
     </div>
 
     <script>
